# glaze-interop.jl

./: .clangd  .gitignore  CONTRIBUTING.md  LICENSE  Project.toml  README.md  run_tests.bat  run_tests.sh  run_tests_debug.sh
.github/workflows/: ci.yml
cpp_interface/: CMakeLists.txt  build.jl
docs/: README.md  advanced_usage.md  api_reference.md  building.md  getting_started.md  troubleshooting.md  type_system.md
examples/: README.md  build_examples.jl  complex_nested_example.cpp  example_struct.hpp  example_usage.jl  iteration_demo.jl  member_function_comparison.cpp  nested_struct_example.cpp  type_system_example.cpp  variant_example.jl
src/: Glaze.jl  library.jl  strings.jl  types.jl  variants.jl  vectors.jl
test/: CMakeLists.txt  README.md  julia_animal_structs.jl  runtests.jl  test_abi_diagnostics.jl  test_all_types.cpp  test_all_types.hpp  test_all_types.jl  test_array_interface.jl  test_complex_nested.jl  test_complex_vectors.jl  test_iteration_performance.jl  test_julia_to_cpp_variants.jl  test_lib_single_unit.cpp  test_map_types.hpp  test_maps.jl  test_member_function_detection.cpp  test_member_function_template_demo.cpp  test_member_functions.hpp  test_member_functions.jl  test_member_functions_comprehensive.jl  test_member_functions_error_handling.jl  test_member_functions_extended.jl  test_member_functions_vectors.jl  test_name_v.cpp  test_nested_structs.cpp  test_nested_structs.jl  test_optional.jl  test_pair_support.jl  test_pair_type.jl  test_person_construction.jl  test_pretty_printing.jl  test_shared_future.hpp  test_shared_future.jl  test_shared_future_simple.jl  test_simple_vector_return.cpp  test_string_delimiter.jl  test_string_param.cpp  test_structs_glaze_simple.cpp  test_structs_glaze_simple.hpp  (+10 more)
test/benchmarks/: benchmark_iteration.cpp  benchmark_iteration.jl  simple_iteration_benchmark.jl
test/benchmarks/build_benchmark/: CMakeLists.txt
test/integration/: CMakeLists_nested.txt  test_generic_nested.cpp  test_generic_nested.jl
test/utils/: verify_julia_sizes.jl  verify_struct_sizes.cpp
